@@ -1,4 +1,5 @@
 ﻿using System;
+using System.Linq;
 using System.Collections.Generic;
 using UnityEngine;
 using ColossalFramework;
@@ -533,9 +534,11 @@ namespace BOB
 			// Did we succesfully create a new prefab?
 			if (newPrefab != null)
 			{
+				Logging.Message("Trying to find item");
+
 				// Yes - regenerate random list to reflect the change, and select the new item.
 				RandomList();
-				randomList.FindItem(newPrefab.name);
+				randomList.FindItem(newPrefab);
 				SelectedRandomPrefab = newPrefab;
 			}
 		}
@@ -604,8 +607,8 @@ namespace BOB
 				selectedRandomPrefab.tree.name = selectedRandomPrefab.name;
 			}
 
-			// Refresh list.
-			randomList.Refresh();
+			// Regenerate list.
+			RandomList();
 		}
 
 
@@ -830,7 +833,7 @@ namespace BOB
 				// Trees.
 				randomList.m_rowsData = new FastList<object>
 				{
-					m_buffer = PrefabLists.randomTrees.ToArray(),
+					m_buffer = PrefabLists.randomTrees.OrderBy(x => x.name.ToLower()).ToArray(),
 					m_size = PrefabLists.randomTrees.Count
 				};
 			}
@@ -839,7 +842,7 @@ namespace BOB
 				// Props.
 				randomList.m_rowsData = new FastList<object>
 				{
-					m_buffer = PrefabLists.randomProps.ToArray(),
+					m_buffer = PrefabLists.randomProps.OrderBy(x => x.name.ToLower()).ToArray(),
 					m_size = PrefabLists.randomProps.Count
 				};
 			}
@@ -858,7 +861,7 @@ namespace BOB
 			// Create return fastlist from our filtered list.
 			variationsList.rowsData = new FastList<object>
 			{
-				m_buffer = selectedRandomPrefab?.variations?.ToArray() ?? new BOBVariation[0],
+				m_buffer = selectedRandomPrefab?.variations?.OrderBy(x => PrefabLists.GetDisplayName(x.name).ToLower()).ToArray(),
 				m_size = selectedRandomPrefab?.variations?.Count ?? 0
 			};
 		}
